--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
           <li><a href="#" class="active">HOME</a></li>
           <li><a href="#about">ABOUT</a></li>
           <li><a href="#services">SERVICES</a></li>
+          <li><a href="#scholarship">SCHOLARSHIP</a></li>
           <li><a href="#" class="cta-button">Let's Talk</a></li>
         </ul>
         <div class="hamburger">
@@ -115,6 +116,41 @@
       </div>
     </div>
     <div class="services-bg-text">02</div>
+  </section>
+  
+  <section class="scholarship-section" id="scholarship">
+    <div class="container">
+      <div class="scholarship-wrapper">
+        <div class="scholarship-header">
+          <h2 class="scholarship-title">Scholarship Programs Management</h2>
+        </div>
+        
+        <div class="scholarship-content">
+          <div class="scholarship-text">
+            <p class="scholarship-main-desc">
+              With more than 20 years in managing scholarship programs with several Saudi governmental sponsors, we are experts of providing full and comprehensive plans and services to meet the sponsor's vision and targets. Services include but not limited to:
+            </p>
+            <ul class="scholarship-list">
+              <li>Candidate Selection Criteria.</li>
+              <li>Universities Selection Criteria.</li>
+              <li>Program bylaws and regulations.</li>
+              <li>Student Journey plan.</li>
+              <li>Counseling & students development plans.</li>
+              <li>Pre-Departure preparatory programs.</li>
+              <li>Enroll students into international universities.</li>
+              <li>Workshops, awareness sessions and summits.</li>
+              <li>Pre travel and post travel logistics.</li>
+              <li>Overseas continual support.</li>
+            </ul>
+            <a href="services/scholarship.html" class="learn-more-btn">Learn More <span class="arrow-icon">→</span></a>
+          </div>
+          <div class="scholarship-image">
+            <!-- Image background is set in CSS -->
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="scholarship-bg-text">SCHOLAR</div>
   </section>
 
   <script src="script.js"></script>
