--- a/index.html
+++ b/index.html
@@ -129,16 +129,16 @@
             With more than 20 years in managing scholarship programs with several Saudi governmental sponsors, we are experts of providing full and comprehensive plans and services to meet the sponsor's vision and targets. Services include but not limited to:
           </p>
           <ul class="scholarship-list">
-            <li>Candidate Selection Criteria.</li>
-            <li>Universities Selection Criteria.</li>
-            <li>Program bylaws and regulations.</li>
-            <li>Student Journey plan.</li>
-            <li>Counseling & students development plans.</li>
-            <li>Pre-Departure preparatory programs.</li>
-            <li>Enroll students into international universities.</li>
-            <li>Workshops, awareness sessions and summits.</li>
-            <li>Pre travel and post travel logistics.</li>
-            <li>Overseas continual support.</li>
+            <li style="--i: 0">Candidate Selection Criteria.</li>
+            <li style="--i: 1">Universities Selection Criteria.</li>
+            <li style="--i: 2">Program bylaws and regulations.</li>
+            <li style="--i: 3">Student Journey plan.</li>
+            <li style="--i: 4">Counseling & students development plans.</li>
+            <li style="--i: 5">Pre-Departure preparatory programs.</li>
+            <li style="--i: 6">Enroll students into international universities.</li>
+            <li style="--i: 7">Workshops, awareness sessions and summits.</li>
+            <li style="--i: 8">Pre travel and post travel logistics.</li>
+            <li style="--i: 9">Overseas continual support.</li>
           </ul>
           <a href="services/scholarship.html" class="learn-more-btn">Learn More <span class="arrow-icon">→</span></a>
         </div>
