--- a/index.html
+++ b/index.html
@@ -164,6 +164,38 @@
     </div>
   </section>
 
+  <section class="contact-section">
+    <div class="contact-container">
+      <div class="contact-info">
+        <h2>We Listen, design your vision and bring it to life...</h2>
+        <h3>Let's Talk</h3>
+        <div class="contact-details">
+          <p><span>Saudi Arabia</span><br>
+          Level 7, Building 4.07, Zone 4<br>
+          King Abdullah Financial District (KAFD)<br>
+          Riyadh 13519, Saudi Arabia.<br>
+          <span>Tel:</span> +966 123456789<br>
+          <span>Mobile:</span> +966 123456789<br>
+          <span>Email:</span> jad@jadco.co</p>
+          <p><span>USA</span><br>
+          3972 Barranca Parkway,<br>
+          Ste J139, Irvine, CA 92606</p>
+          <p><span>UAE</span><br>
+          A1, Dubai Digital Park, Dubai Silicon Oasis,<br>
+          Dubai, United Arab Emirates.</p>
+        </div>
+      </div>
+      <div class="contact-form">
+        <input type="text" placeholder="First Name">
+        <input type="text" placeholder="Last Name">
+        <input type="email" placeholder="Email">
+        <input type="text" placeholder="Phone Number">
+        <textarea placeholder="Message"></textarea>
+        <button type="submit">SEND A MESSAGE →</button>
+      </div>
+    </div>
+  </section>
+
   <script src="script.js"></script>
 </body>
 </html>
