--- a/index.html
+++ b/index.html
@@ -167,22 +167,10 @@
   <section class="contact-section">
     <div class="contact-container">
       <div class="contact-info">
-        <h2>We Listen, design your vision and bring it to life...</h2>
-        <h3>Let's Talk</h3>
-        <div class="contact-details">
-          <p><span>Saudi Arabia</span><br>
-          Level 7, Building 4.07, Zone 4<br>
-          King Abdullah Financial District (KAFD)<br>
-          Riyadh 13519, Saudi Arabia.<br>
-          <span>Tel:</span> +966 123456789<br>
-          <span>Mobile:</span> +966 123456789<br>
-          <span>Email:</span> jad@jadco.co</p>
-          <p><span>USA</span><br>
-          3972 Barranca Parkway,<br>
-          Ste J139, Irvine, CA 92606</p>
-          <p><span>UAE</span><br>
-          A1, Dubai Digital Park, Dubai Silicon Oasis,<br>
-          Dubai, United Arab Emirates.</p>
+        <div class="logo">LOGO</div>
+        <div class="text-content">
+          <h2>We Listen, design your vision and bring it to life...</h2>
+          <h3>Let's Talk</h3>
         </div>
       </div>
       <div class="contact-form">
@@ -193,6 +181,21 @@
         <textarea placeholder="Message"></textarea>
         <button type="submit">SEND A MESSAGE →</button>
       </div>
+    </div>
+    <div class="contact-details">
+      <p><span>Saudi Arabia</span><br>
+      Level 7, Building 4.07, Zone 4<br>
+      King Abdullah Financial District (KAFD)<br>
+      Riyadh 13519, Saudi Arabia.<br>
+      <span>Tel:</span> +966 123456789<br>
+      <span>Mobile:</span> +966 123456789<br>
+      <span>Email:</span> jad@jadco.co</p>
+      <p><span>USA</span><br>
+      3972 Barranca Parkway,<br>
+      Ste J139, Irvine, CA 92606</p>
+      <p><span>UAE</span><br>
+      A1, Dubai Digital Park, Dubai Silicon Oasis,<br>
+      Dubai, United Arab Emirates.</p>
     </div>
   </section>
 
