--- a/index.html
+++ b/index.html
@@ -167,10 +167,10 @@
   <section class="contact-section">
     <div class="contact-container">
       <div class="contact-info">
-        <div class="logo">LOGO</div>
+        <div class="logo">JADOO</div>
         <div class="text-content">
-          <h2>We Listen, design your vision and bring it to life...</h2>
-          <h3>Let's Talk</h3>
+          <h3>We Listen, design your vision and bring it to life...</h3>
+          <h2>Let's Talk</h2>
         </div>
       </div>
       <div class="contact-form">
