--- a/index.html
+++ b/index.html
@@ -148,24 +148,26 @@
   </section>
 
   <section class="statistics-section">
-    <div class="statistics-container">
-      <div class="stat-item">
-        <h3>15 Institutes</h3>
-        <p>Cross disciplinary boundaries</p>
-      </div>
-      <div class="stat-item">
-        <h3>20 Libraries</h3>
-        <p>Hold over 12 million items</p>
-      </div>
-      <div class="stat-item">
-        <h3>$2.2 Billion</h3>
-        <p>Sponsored research budget</p>
+    <div class="container">
+      <div class="statistics-container">
+        <div class="stat-item">
+          <h3>15 Institutes</h3>
+          <p>Cross disciplinary boundaries</p>
+        </div>
+        <div class="stat-item">
+          <h3>20 Libraries</h3>
+          <p>Hold over 12 million items</p>
+        </div>
+        <div class="stat-item">
+          <h3>$2.2 Billion</h3>
+          <p>Sponsored research budget</p>
+        </div>
       </div>
     </div>
   </section>
 
   <section class="contact-section">
-    <div class="contact-container">
+    <div class="container">
       <div class="contact-info">
         <div class="logo">JADOO</div>
         <div class="text-content">
