--- a/index.html
+++ b/index.html
@@ -12,12 +12,14 @@
 <body>
   <header>
     <div class="container">
-      <div class="logo"><span class="logo-icon">✦</span> JADOO</div>
+      <div class="logo">
+        <img src="images/logo/logo-black.png" alt="JADOO" style="height: 50px;">
+      </div>
       <nav>
         <ul class="nav-links">
           <li><a href="#" class="active">HOME</a></li>
           <li><a href="#about">ABOUT</a></li>
-          <li><a href="#" class="cta-button">Let's Talk</a></li>
+          <li><a href="#contact" class="cta-button">Let's Talk</a></li>
         </ul>
         <div class="hamburger">
           <span></span>
@@ -166,7 +168,7 @@
     </div>
   </section>
 
-  <section class="contact-section">
+  <section class="contact-section" id="contact">
     <div class="container">
       <div class="contact-info">
         <div class="logo">JADOO</div>
