--- a/index.html
+++ b/index.html
@@ -171,7 +171,9 @@
   <section class="contact-section" id="contact">
     <div class="container">
       <div class="contact-info">
-        <div class="logo">JADOO</div>
+        <div class="logo">
+          <img src="images/logo/logo-black.png" alt="JADOO">
+        </div>
         <div class="text-content">
           <h3>We Listen, design your vision and bring it to life...</h3>
           <h2>Let's Talk</h2>
