--- a/index.html
+++ b/index.html
@@ -179,29 +179,31 @@
           <h2>Let's Talk</h2>
         </div>
       </div>
-      <div class="contact-form">
-        <input type="text" placeholder="First Name">
-        <input type="text" placeholder="Last Name">
-        <input type="email" placeholder="Email">
-        <input type="text" placeholder="Phone Number">
-        <textarea placeholder="Message"></textarea>
-        <button type="submit">SEND A MESSAGE →</button>
+      <div class="contact-details">
+        <div class="contact-address_1">
+          <p><span>Saudi Arabia</span><br>
+          Level 7, Building 4.07, Zone 4<br>
+          King Abdullah Financial District (KAFD)<br>
+          Riyadh 13519, Saudi Arabia.<br>
+          <span>Tel:</span> +966 123456789<br>
+          <span>Mobile:</span> +966 123456789<br>
+          <span>Email:</span> jad@jadco.co</p>
+          <p><span>USA</span><br>
+          3972 Barranca Parkway,<br>
+          Ste J139, Irvine, CA 92606</p>
+          <p><span>UAE</span><br>
+          A1, Dubai Digital Park, Dubai Silicon Oasis,<br>
+          Dubai, United Arab Emirates.</p>
+        </div>
+        <div class="contact-form">
+          <input type="text" placeholder="First Name">
+          <input type="text" placeholder="Last Name">
+          <input type="email" placeholder="Email">
+          <input type="text" placeholder="Phone Number">
+          <textarea placeholder="Message"></textarea>
+          <button type="submit">SEND A MESSAGE →</button>
+        </div>
       </div>
-    </div>
-    <div class="contact-details">
-      <p><span>Saudi Arabia</span><br>
-      Level 7, Building 4.07, Zone 4<br>
-      King Abdullah Financial District (KAFD)<br>
-      Riyadh 13519, Saudi Arabia.<br>
-      <span>Tel:</span> +966 123456789<br>
-      <span>Mobile:</span> +966 123456789<br>
-      <span>Email:</span> jad@jadco.co</p>
-      <p><span>USA</span><br>
-      3972 Barranca Parkway,<br>
-      Ste J139, Irvine, CA 92606</p>
-      <p><span>UAE</span><br>
-      A1, Dubai Digital Park, Dubai Silicon Oasis,<br>
-      Dubai, United Arab Emirates.</p>
     </div>
   </section>
 
