--- a/index.html
+++ b/index.html
@@ -181,19 +181,22 @@
       </div>
       <div class="contact-details">
         <div class="contact-address_1">
-          <p><span>Saudi Arabia</span><br>
+          <p><span>Saudi Arabia</span>
           Level 7, Building 4.07, Zone 4<br>
           King Abdullah Financial District (KAFD)<br>
-          Riyadh 13519, Saudi Arabia.<br>
+          Riyadh 13519, Saudi Arabia.<br><br>
           <span>Tel:</span> +966 123456789<br>
           <span>Mobile:</span> +966 123456789<br>
           <span>Email:</span> jad@jadco.co</p>
-          <p><span>USA</span><br>
-          3972 Barranca Parkway,<br>
-          Ste J139, Irvine, CA 92606</p>
-          <p><span>UAE</span><br>
-          A1, Dubai Digital Park, Dubai Silicon Oasis,<br>
-          Dubai, United Arab Emirates.</p>
+        </div>
+        <div class="contact-address_2">
+          <p><span>USA</span>
+            3972 Barranca Parkway,<br>
+            Ste J139, Irvine, CA 92606</p>
+            <br>
+          <p><span>UAE</span>
+            A1, Dubai Digital Park, Dubai Silicon Oasis,<br>
+            Dubai, United Arab Emirates.</p>
         </div>
         <div class="contact-form">
           <input type="text" placeholder="First Name">
