--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <ul class="nav-links">
           <li><a href="#" class="active">HOME</a></li>
           <li><a href="#about">ABOUT</a></li>
-          <li><a href="#contact" class="cta-button">Let's Talk</a></li>
+          <li><a href="#contact" class="cta-button nav-cta">Let's Talk</a></li>
         </ul>
         <div class="hamburger">
           <span></span>
