--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
       </div>
       <nav>
         <ul class="nav-links">
-          <li><a href="#" class="active">HOME</a></li>
-          <li><a href="#about">ABOUT</a></li>
-          <li><a href="#contact" class="cta-button nav-cta">Let's Talk</a></li>
+          <li><a href="#" class="nav-link home-link active">HOME</a></li>
+          <li><a href="#about" class="nav-link about-link">ABOUT</a></li>
+          <li><a href="#contact" class="cta-button nav-cta contact-link">Let's Talk</a></li>
         </ul>
         <div class="hamburger">
           <span></span>
@@ -211,5 +211,31 @@
   </section>
 
   <script src="script.js"></script>
+  <footer>
+    <div class="container">
+      <div class="footer-content">
+        <div class="footer-logo">
+          <img src="images/logo/logo-white.png" alt="JADOO">
+        </div>
+        <div class="footer-links">
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#scholarship">Scholarship</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
+        </div>
+        <div class="footer-social">
+          <a href="#"><img src="images/icons/facebook.png" alt="Facebook"></a>
+          <a href="#"><img src="images/icons/twitter.png" alt="Twitter"></a>
+          <a href="#"><img src="images/icons/linkedin.png" alt="LinkedIn"></a>
+        </div>
+      </div>
+      <div class="footer-bottom">
+        <p>&copy; 2023 JADOO. All rights reserved.</p>
+      </div>
+    </div>
+  </footer>
 </body>
 </html>
