--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link href="style.css" rel="stylesheet" type="text/css" />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <link href="Packages/font-awesome/css/all.min.css" rel="stylesheet">
 </head>
 
 <body>
@@ -227,13 +228,13 @@
           </ul>
         </div>
         <div class="footer-social">
-          <a href="#"><img src="images/icons/facebook.png" alt="Facebook"></a>
-          <a href="#"><img src="images/icons/twitter.png" alt="Twitter"></a>
-          <a href="#"><img src="images/icons/linkedin.png" alt="LinkedIn"></a>
+          <a href="#"><i class="fab fa-facebook-f"></i></a>
+          <a href="#"><i class="fab fa-twitter"></i></a>
+          <a href="#"><i class="fab fa-linkedin-in"></i></a>
         </div>
       </div>
       <div class="footer-bottom">
-        <p>&copy; 2023 JADOO. All rights reserved.</p>
+        <p>&copy; 2025 JADOO. All rights reserved.</p>
       </div>
     </div>
   </footer>
