--- a/index.html
+++ b/index.html
@@ -218,23 +218,15 @@
         <div class="footer-logo">
           <img src="images/logo/logo-white.png" alt="JADOO">
         </div>
-        <div class="footer-links">
-          <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#services">Services</a></li>
-            <li><a href="#scholarship">Scholarship</a></li>
-            <li><a href="#contact">Contact</a></li>
-          </ul>
-        </div>
         <div class="footer-social">
-          <a href="#"><i class="fab fa-facebook-f"></i></a>
-          <a href="#"><i class="fab fa-twitter"></i></a>
+          <a href="#"><i class="fab fa-youtube"></i></a>
+          <p>Youtube</p>
           <a href="#"><i class="fab fa-linkedin-in"></i></a>
+          <p>LinkedIn</p>
         </div>
-      </div>
-      <div class="footer-bottom">
-        <p>&copy; 2025 JADOO. All rights reserved.</p>
+        <div class="footer-bottom">
+          <p>&copy; 2025 JADOO. All rights reserved.</p>
+        </div>
       </div>
     </div>
   </footer>
