--- a/index.html
+++ b/index.html
@@ -219,10 +219,8 @@
           <img src="images/logo/logo-white.png" alt="JADOO">
         </div>
         <div class="footer-social">
-          <a href="#"><i class="fab fa-youtube"></i></a>
-          <p>Youtube</p>
-          <a href="#"><i class="fab fa-linkedin-in"></i></a>
-          <p>LinkedIn</p>
+          <a href="#"><i class="fab fa-youtube"></i><p>Youtube</p></a>
+          <a href="#"><i class="fab fa-linkedin-in"></i><p>LinkedIn</p></a>
         </div>
         <div class="footer-bottom">
           <p>&copy; 2025 JADOO. All rights reserved.</p>
