--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
     <div class="container">
       <div class="footer-content">
         <div class="footer-logo">
-          <img src="images/logo/logo-white.png" alt="JADOO">
+          <img src="images/logo/logo-black.png" alt="JADOO">
         </div>
         <div class="footer-social">
           <a href="#"><i class="fab fa-youtube"></i><p>Youtube</p></a>
