--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, maximum-scale=1.0, user-scalable=no">
   <title>JADOO - From Education and Training to Innovation</title>
-  <link href="style.css" rel="stylesheet" type="text/css" />
+  
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <link href="Packages/font-awesome/css/all.min.css" rel="stylesheet">
+  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+  <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
@@ -22,11 +24,7 @@
           <li><a href="#about" class="nav-link about-link">ABOUT</a></li>
           <li><a href="#contact" class="cta-button nav-cta contact-link">Let's Talk</a></li>
         </ul>
-        <div class="hamburger">
-          <span></span>
-          <span></span>
-          <span></span>
-        </div>
+      
       </nav>
     </div>
   </header>
@@ -211,7 +209,9 @@
     </div>
   </section>
 
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
   <script src="script.js"></script>
+  
   <footer>
     <div class="container">
       <div class="footer-content">
@@ -225,7 +225,6 @@
         <div class="footer-bottom">
           <p>&copy; 2025 JADOO. All rights reserved.</p>
         </div>
-      </div>
     </div>
   </footer>
 </body>
