--- a/index.html
+++ b/index.html
@@ -78,18 +78,20 @@
           <p class="about-main-desc">
             After more than 20 years of experience in the Saudi Arabia's Human Capital Development market, JAD Consulting (JADCO) was established to continue supporting the industry with a new inspired vision by the great Saudi Vision 2030.
           </p>
-          <div class="about-columns">
-            <div class="about-column">
+          <div class="row about-columns">
+            <div class="col-md-6 about-column">
               <p>JADCO and its highly ranked international partners of Companies, Universities and SMEs are forming together an exclusive and innovative consortium to serve and be part of the revolution and development and support the transformation for the next levels.</p>
             </div>
-            <div class="about-column">
+            <div class="col-md-6 about-column">
               <p>JADCO in collaboration with the best partners in the globe, customize and Tailor projects to bridge the gap and providing the latest technologies to ensure the max level of quality of deliverables, support local content and transform knowledge to meet the objectives of our clients.</p>
             </div>
           </div>
         </div>
       </div>
     </div>
-    <div class="about-bg-text">JADOO</div>
+    <div class="about-bg-text">
+      <img src="images/logo/logo-black.png" alt="JADOO" class="img-fluid">
+    </div>
   </section>
 
   <section class="services-section" id="services">
