--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
         </div>
       </div>
     </div>
-    <div class="about-bg-text">
-      <img src="images/logo/logo-black.png" alt="JADOO" class="img-fluid">
+    <div class="about-bg-text col-12">
+      <img src="images/logo/logo-black.png" alt="JADOO" class="img-fluid col-12">
     </div>
   </section>
 
