--- a/index.html
+++ b/index.html
@@ -171,17 +171,18 @@
 
   <section class="contact-section" id="contact">
     <div class="container">
-      <div class="contact-info">
-        <div class="logo">
-          <img src="images/logo/logo-black.png" alt="JADOO">
+      <div class="contact-info row">
+        <div class="logo col-md-2">
+          <img src="images/logo/logo-black.png" alt="JADOO" class="img-fluid">
         </div>
-        <div class="text-content">
+        <div class="col-md-1"></div>
+        <div class="text-content col-md-9">
           <h3>We Listen, design your vision and bring it to life...</h3>
           <h2>Let's Talk</h2>
         </div>
       </div>
-      <div class="contact-details">
-        <div class="contact-address_1">
+      <div class="contact-details row">
+        <div class="contact-address_1 col-md-3">
           <p><span>Saudi Arabia</span>
           Level 7, Building 4.07, Zone 4<br>
           King Abdullah Financial District (KAFD)<br>
@@ -190,7 +191,7 @@
           <span>Mobile:</span> +966 123456789<br>
           <span>Email:</span> jad@jadco.co</p>
         </div>
-        <div class="contact-address_2">
+        <div class="contact-address_2 col-md-3">
           <p><span>USA</span>
             3972 Barranca Parkway,<br>
             Ste J139, Irvine, CA 92606</p>
@@ -199,13 +200,13 @@
             A1, Dubai Digital Park, Dubai Silicon Oasis,<br>
             Dubai, United Arab Emirates.</p>
         </div>
-        <div class="contact-form">
-          <input type="text" placeholder="First Name">
-          <input type="text" placeholder="Last Name">
-          <input type="email" placeholder="Email">
-          <input type="text" placeholder="Phone Number">
-          <textarea placeholder="Message"></textarea>
-          <button type="submit">SEND A MESSAGE →</button>
+        <div class="contact-form col-md-6">
+          <input type="text" class="form-control mb-3" placeholder="First Name">
+          <input type="text" class="form-control mb-3" placeholder="Last Name">
+          <input type="email" class="form-control mb-3" placeholder="Email">
+          <input type="text" class="form-control mb-3" placeholder="Phone Number">
+          <textarea class="form-control mb-3" placeholder="Message"></textarea>
+          <button type="submit" class="btn btn-primary">SEND A MESSAGE →</button>
         </div>
       </div>
     </div>
