--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           <h2 class="about-title">ABOUT</h2>
         </div>
         <div class="about-content">
-          <p class="about-main-desc">
+          <p class="about-main-desc col-12">
             After more than 20 years of experience in the Saudi Arabia's Human Capital Development market, JAD Consulting (JADCO) was established to continue supporting the industry with a new inspired vision by the great Saudi Vision 2030.
           </p>
           <div class="row about-columns">
