--- a/index.html
+++ b/index.html
@@ -31,39 +31,41 @@
 
   <section class="hero">
     <div class="container">
-      <div class="hero-content">
-        <h1>FROM EDUCATION <br>AND TRAINING <br>TO INNOVATION</h1>
-        <p class="hero-desc">JADOO brings innovative solutions to education and technology, transforming the way we learn and interact with the digital world.</p>
-        <a href="#" class="cta-button hero-cta">Discover More</a>
-      </div>
-      <div class="services">
-        <h2>SERVICES</h2>
-        <ul class="service-list">
-          <li>
-            <a href="services/education.html">
-              <span>Education and Training</span>
-              <span class="arrow">→</span>
-            </a>
-          </li>
-          <li>
-            <a href="services/ai.html">
-              <span>AI and Advanced Technologies</span>
-              <span class="arrow">→</span>
-            </a>
-          </li>
-          <li>
-            <a href="services/gaming.html">
-              <span>E-Gaming and eSport</span>
-              <span class="arrow">→</span>
-            </a>
-          </li>
-          <li>
-            <a href="services/arts.html">
-              <span>Arts and Entertainment</span>
-              <span class="arrow">→</span>
-            </a>
-          </li>
-        </ul>
+      <div class="top-section row align-items-center">
+        <div class="col-md-6 hero-content">
+          <h1>FROM EDUCATION <br>AND TRAINING <br>TO INNOVATION</h1>
+          <p class="hero-desc">JADOO brings innovative solutions to education and technology, transforming the way we learn and interact with the digital world.</p>
+          <a href="#" class="cta-button hero-cta">Discover More</a>
+        </div>
+        <div class="col-md-6 services">
+          <h2>SERVICES</h2>
+          <ul class="service-list">
+            <li>
+              <a href="services/education.html">
+                <span>Education and Training</span>
+                <span class="arrow">→</span>
+              </a>
+            </li>
+            <li>
+              <a href="services/ai.html">
+                <span>AI and Advanced Technologies</span>
+                <span class="arrow">→</span>
+              </a>
+            </li>
+            <li>
+              <a href="services/gaming.html">
+                <span>E-Gaming and eSport</span>
+                <span class="arrow">→</span>
+              </a>
+            </li>
+            <li>
+              <a href="services/arts.html">
+                <span>Arts and Entertainment</span>
+                <span class="arrow">→</span>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </div>
   </section>
