--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <link href="Packages/font-awesome/css/all.min.css" rel="stylesheet">
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
-  <header class="static-header">
+  <header id="header" class="static-header">
     <div class="container">
       <div class="logo">
         <img src="images/logo/logo-black.png" alt="JADOO" style="height: 50px;">
@@ -28,7 +29,7 @@
     </div>
   </header>
 
-  <section class="hero">
+  <section class="hero" id="hero">
     <div class="container">
       <div class="top-section row align-items-center">
         <div class="col-md-6 hero-content">
@@ -213,7 +214,6 @@
     </div>
   </section>
 
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
   <script src="script.js"></script>
   
