--- a/index.html
+++ b/index.html
@@ -105,16 +105,65 @@
           <div class="services-number">02</div>
         </div>
         
-        <div class="services-layout">
-          <div class="services-image">
-            <!-- This will be a placeholder image div, styled with CSS -->
+        <div id="servicesCarousel" class="carousel slide" data-ride="carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <div class="services-layout">
+                <div class="services-image">
+                  <img src="images/services/ai.jpg" alt="AI and Advanced Technologies" class="img-fluid">
+                </div>
+                <div class="services-content">
+                  <h3>AI and Advanced Technologies.</h3>
+                  <p>AI represents a transformative technology with the potential to revolutionize organizations services and operations. By leveraging AI, organizations can enhance efficiency, improve decision-making and deliver superior to public.</p>
+                  <a href="services/ai.html" class="learn-more">Learn More <span class="arrow-icon">→</span></a>
+                </div>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="services-layout">
+                <div class="services-image">
+                  <img src="images/services/education.jpg" alt="Education and Training" class="img-fluid">
+                </div>
+                <div class="services-content">
+                  <h3>Education and Training.</h3>
+                  <p>We provide comprehensive education and training programs to help individuals and organizations achieve their goals and stay ahead in the competitive market.</p>
+                  <a href="services/education.html" class="learn-more">Learn More <span class="arrow-icon">→</span></a>
+                </div>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="services-layout">
+                <div class="services-image">
+                  <img src="images/services/gaming.jpg" alt="E-Gaming and eSport" class="img-fluid">
+                </div>
+                <div class="services-content">
+                  <h3>E-Gaming and eSport.</h3>
+                  <p>We offer cutting-edge solutions and platforms for e-gaming and eSport, providing an immersive and engaging experience for gamers and enthusiasts.</p>
+                  <a href="services/gaming.html" class="learn-more">Learn More <span class="arrow-icon">→</span></a>
+                </div>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="services-layout">
+                <div class="services-image">
+                  <img src="images/services/arts.jpg" alt="Arts and Entertainment" class="img-fluid">
+                </div>
+                <div class="services-content">
+                  <h3>Arts and Entertainment.</h3>
+                  <p>Our arts and entertainment services bring creativity and innovation to the forefront, offering unique experiences and opportunities for artists and audiences alike.</p>
+                  <a href="services/arts.html" class="learn-more">Learn More <span class="arrow-icon">→</span></a>
+                </div>
+              </div>
+            </div>
           </div>
-          
-          <div class="services-content">
-            <h3>AI and Advanced Technologies.</h3>
-            <p>AI represents a transformative technology with the potential to revolutionize organizations services and operations. By leveraging AI, organizations can enhance efficiency, improve decision-making and deliver superior to public.</p>
-            <a href="services/ai.html" class="learn-more">Learn More <span class="arrow-icon">→</span></a>
-          </div>
+          <a class="carousel-control-prev" href="#servicesCarousel" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#servicesCarousel" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
         </div>
       </div>
     </div>
