--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             <div class="carousel-item">
               <div class="services-layout">
                 <div class="services-image">
-                  <img src="images/services/gaming.jpg" alt="E-Gaming and eSport" class="img-fluid">
+                  <img src="images/services/ai.jpg" alt="E-Gaming and eSport" class="img-fluid">
                 </div>
                 <div class="services-content">
                   <h3>E-Gaming and eSport.</h3>
@@ -146,7 +146,7 @@
             <div class="carousel-item">
               <div class="services-layout">
                 <div class="services-image">
-                  <img src="images/services/arts.jpg" alt="Arts and Entertainment" class="img-fluid">
+                  <img src="images/services/education.jpg" alt="Arts and Entertainment" class="img-fluid">
                 </div>
                 <div class="services-content">
                   <h3>Arts and Entertainment.</h3>
