--- a/index.html
+++ b/index.html
@@ -14,18 +14,30 @@
 
 <body>
   <header id="header" class="static-header">
-    <div class="container">
+    <div class="container d-flex justify-content-between align-items-center">
       <div class="logo">
         <img src="images/logo/logo-black.png" alt="JADOO" style="height: 50px;">
       </div>
-      <nav>
-        <ul class="nav-links">
+      <nav class="d-none d-md-block">
+        <ul class="nav-links d-flex">
           <li><a href="#" class="nav-link home-link active">HOME</a></li>
           <li><a href="#about" class="nav-link about-link">ABOUT</a></li>
           <li><a href="#contact" class="cta-button nav-cta contact-link">Let's Talk</a></li>
         </ul>
       </nav>
+      <div class="hamburger d-md-none">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
     </div>
+    <nav class="d-md-none">
+      <ul class="nav-links flex-column">
+        <li><a href="#" class="nav-link home-link active">HOME</a></li>
+        <li><a href="#about" class="nav-link about-link">ABOUT</a></li>
+        <li><a href="#contact" class="cta-button nav-cta contact-link">Let's Talk</a></li>
+      </ul>
+    </nav>
   </header>
 
   <section class="hero" id="hero">
@@ -264,8 +276,8 @@
     </div>
   </section>
 
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="script.js"></script>
   
   <script>
