--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
           <a href="services/scholarship.html" class="learn-more-btn">Learn More <span class="arrow-icon">→</span></a>
         </div>
         <div class="scholarship-image">
-          <!-- Image background is set in CSS -->
+          <img src="images/services/scholar.jpg" alt="Scholarship Image" class="img-fluid">
         </div>
       </div>
     </div>
