--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <nav class="d-none d-md-block">
         <ul class="nav-links d-flex">
           <li><a href="#" class="nav-link home-link active">HOME</a></li>
-          <li><a href="#about" class="nav-link about-link">ABOUT</a></li>
+          <li><a href="about.html" class="nav-link about-link">ABOUT</a></li>
           <li><a href="#contact" class="cta-button nav-cta contact-link">Let's Talk</a></li>
         </ul>
       </nav>
@@ -34,7 +34,7 @@
     <nav class="d-md-none">
       <ul class="nav-links flex-column">
         <li><a href="#" class="nav-link home-link active">HOME</a></li>
-        <li><a href="#about" class="nav-link about-link">ABOUT</a></li>
+        <li><a href="about.html" class="nav-link about-link">ABOUT</a></li>
         <li><a href="#contact" class="cta-button nav-cta contact-link">Let's Talk</a></li>
       </ul>
     </nav>
