--- a/index.html
+++ b/index.html
@@ -12,7 +12,18 @@
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
-<body>
+<body class="loading">
+  <!-- Preloader -->
+  <div class="preloader">
+    <div class="loader">
+      <div class="loader-circle"></div>
+      <div class="loader-circle"></div>
+      <div class="loader-circle"></div>
+      <div class="loader-circle"></div>
+      <div class="loader-logo">J</div>
+    </div>
+  </div>
+
   <header id="header" class="static-header">
     <div class="container d-flex justify-content-between align-items-center">
       <div class="logo">
