--- a/about.html
+++ b/about.html
@@ -295,7 +295,7 @@
             <textarea class="form-control" id="message" placeholder=" "></textarea>
             <label for="message" class="form-label">Brief message</label>
           </div>
-          <button type="submit">SEND MESSAGE <i class="fas fa-paper-plane ml-2"></i></button>
+          <button type="submit">Learn More <span class="arrow-icon">→</span></button>
         </div>
       </div>
     </div>
