--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
             <textarea class="form-control" id="message" placeholder=" "></textarea>
             <label for="message" class="form-label">Brief message</label>
           </div>
-          <button type="submit">SEND MESSAGE <i class="fas fa-paper-plane ml-2"></i></button>
+          <button type="submit">SEND MESSAGE <i class="fas fa-arrow-right ml-2"></i></button>
         </div>
       </div>
     </div>
