bootstrap on statistics

--- a/about.html
+++ b/about.html
@@ -301,6 +301,31 @@
     </div>
   </section>
 
+  <section class="statistics-section">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-lg-4 col-md-4 col-sm-12 stat-item-col">
+          <div class="stat-item">
+            <h3>15 Institutes</h3>
+            <p>Cross disciplinary boundaries</p>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-4 col-sm-12 stat-item-col">
+          <div class="stat-item">
+            <h3>20 Libraries</h3>
+            <p>Hold over 12 million items</p>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-4 col-sm-12 stat-item-col">
+          <div class="stat-item">
+            <h3>$2.2 Billion</h3>
+            <p>Sponsored research budget</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <footer>
     <div class="container">
       <div class="footer-content">
