--- a/index.html
+++ b/index.html
@@ -230,19 +230,19 @@
       <div class="row justify-content-center">
         <div class="col-lg-4 col-md-4 col-sm-12 stat-item-col">
           <div class="stat-item">
-            <h3>15 Institutes</h3>
+            <h3><span class="counter" data-count="15">0</span> Institutes</h3>
             <p>Cross disciplinary boundaries</p>
           </div>
         </div>
         <div class="col-lg-4 col-md-4 col-sm-12 stat-item-col">
           <div class="stat-item">
-            <h3>20 Libraries</h3>
+            <h3><span class="counter" data-count="20">0</span> Libraries</h3>
             <p>Hold over 12 million items</p>
           </div>
         </div>
         <div class="col-lg-4 col-md-4 col-sm-12 stat-item-col">
           <div class="stat-item">
-            <h3>$2.2 Billion</h3>
+            <h3>$<span class="counter" data-count="2.2">0</span> Billion</h3>
             <p>Sponsored research budget</p>
           </div>
         </div>
